added filters in platform quick fix to remove all existing platforms and conflicting platforms
Signed-off-by: Arun Venmany <Arun.Kumar.V.N@ibm.com>